# instacart_next_order_recommendation

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml
config/: baselines.yaml  compare_untrained_vs_trained.yaml  data_prep.yaml  feedback_analytics.yaml  generate_sample_feedback.yaml  inference.yaml  train.yaml  upload_model.yaml
configs/: baselines.yaml  compare_untrained_vs_trained.yaml  data_prep.yaml  feedback_analytics.yaml  generate_sample_feedback.yaml  inference.yaml  train.yaml  upload_model.yaml
k8s/: README.md  data-loader-pod.yaml  deployment.yaml  pvc.yaml
notebooks/: prepare_instacart_sbert.ipynb  run_baselines.ipynb  serve_recommendations.ipynb  train_sbert.ipynb
scripts/: compare_untrained_vs_trained.py  feedback_analytics.py  generate_sample_feedback.py  upload_eval_artifacts_to_hf.py  upload_model_to_hf.py
src/: __init__.py  constants.py  utils.py
src/api/: __init__.py  auth.py  feedback_store.py  limiter.py  main.py  metrics.py  schemas.py
src/api/routes/: corpus.py  feedback.py  recommend.py
src/baselines/: __init__.py  __main__.py  collaborative_filtering.py  content_based.py  metrics.py  run_baselines.py
src/data/: __init__.py  prepare_instacart_sbert.py
src/inference/: __init__.py  __main__.py  serve_recommendations.py
src/train/: train_sbert.py
src/training/: __init__.py  __main__.py  train_sbert.py
tests/: __init__.py  conftest.py  test_api.py
