[project]
name = "instacart-personalization"
version = "0.1.0"
description = "Two-tower SBERT training for Instacart product recommendation"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "datasets>=2.14.0",
    "jupyterlab>=4.5.4",
    "sentence-transformers>=5.2.2",
    "accelerate>=1.1.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0.0",
    "prometheus-client>=0.21.0",
    "slowapi>=0.1.9",
    "httpx>=0.28.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[project.optional-dependencies]
train = [
    "sentence-transformers>=3.0.0",
    "torch>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "ipykernel>=6.0.0",
    "ipywidgets>=8.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
